--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         </div> 
         <div class="col-lg-6 align-self-center">
           <div class="video">
-            <a href="الفيديو هنا" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
+            <a href="https://www.youtube.com/c/AlaaYT/videos" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
           </div>
         </div>
       </div>
